<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_grupo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descricao_do_grupo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGroupDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchPublic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupo_publico" />

    <Button
        android:id="@+id/btnCreateGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar_grupo" />

</LinearLayout>